Fix the double border when the first column is hidden. #5482

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -279,7 +279,8 @@ $datagrid-small-row-height: 25px;
       background-color: $datagrid-empty-bg-color;
     }
 
-    td:first-child {
+    td:first-child,
+    td.is-hidden:first-child + td {
       border-left: 0;
     }
 
@@ -3043,7 +3044,8 @@ $datagrid-small-row-height: 25px;
 
   &.center,
   &.left {
-    th:first-child {
+    th:first-child,
+    th.is-hidden:first-child + th {
       border-left: 0;
     }
   }
